[gd_scene load_steps=2 format=3 uid="uid://bpw8v2tn3qk5r"]

[ext_resource type="Script" path="res://scripts/ui/ZoneSwitcher.gd" id="1_zoneswitcher"]

[node name="ZoneSwitcher" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 200.0
offset_bottom = 80.0
script = ExtResource("1_zoneswitcher")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 5

[node name="ZoneLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Zone 1"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="PrevButton" type="Button" parent="Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "<"

[node name="NextButton" type="Button" parent="Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = ">"

[node name="UnitIndicators" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 4
alignment = 1

